# 9MLET-tech-challenge-01

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: deploy.md  ml_canvas.md  model_card.md  monitoring.md
models/: metadata.json  mlp.pt  preprocessor.joblib
notebooks/: 01_eda.ipynb  99_demo.ipynb
src/churn/: __init__.py  config.py  logging_config.py
src/churn/api/: __init__.py  app.py  middleware.py  schemas.py
src/churn/cli/: __init__.py  serve.py  train.py
src/churn/dataset/: __init__.py  loader.py  preprocessing.py  schema.py
src/churn/modeling/: __init__.py  baselines.py  evaluation.py  mlp.py  predictor.py  training.py
src/churn/tracking/: __init__.py
tests/: conftest.py  test_api.py  test_schema.py  test_smoke.py
