[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churn"
version = "0.1.0"
description = "Telco customer churn prediction with PyTorch MLP, sklearn baselines, MLflow tracking and FastAPI inference."
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = { text = "MIT" }
authors = [
  { name = "FIAP 9MLET - Tech Challenge 01" },
]
keywords = ["machine-learning", "churn", "pytorch", "mlflow", "fastapi"]
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.26,<2.0",
  "pandas>=2.1,<3.0",
  "scikit-learn>=1.4,<1.6",
  "torch>=2.2,<2.5",
  "mlflow>=2.10,<3.0",
  "fastapi>=0.110,<0.116",
  "uvicorn[standard]>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "pandera>=0.18,<0.21",
  "joblib>=1.3,<2.0",
  "python-json-logger>=2.0,<3.0",
  "kagglehub>=0.2,<1.0",
  "python-dotenv>=1.0,<2.0",
  "matplotlib>=3.8,<4.0",
  "seaborn>=0.13,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<6.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.4,<1.0",
  "ipykernel>=6.29,<7.0",
  "jupyter>=1.0,<2.0",
  "nbstripout>=0.7,<1.0",
]

[project.scripts]
churn-train = "churn.cli.train:main"
churn-serve = "churn.cli.serve:main"

[tool.setuptools.packages.find]
where = ["src"]

# Pull torch from PyTorch's CPU-only index so the Docker image isn't
# carrying the ~1GB of bundled CUDA libraries we never use.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["env", "notebooks", "mlruns", "data", "models"]

[tool.ruff.lint]
select = [
  "E", "W",   # pycodestyle
  "F",        # pyflakes
  "I",        # isort (import ordering)
  "B",        # flake8-bugbear
  "UP",       # pyupgrade
  "N",        # pep8-naming
  "SIM",      # flake8-simplify
  "RET",      # flake8-return
  "C4",       # flake8-comprehensions
  "PIE",      # flake8-pie
]
ignore = [
  "E501",   # line length handled by formatter
  "B008",   # FastAPI uses Depends() in defaults intentionally
  "N803",   # ML convention: function args like X are uppercase
  "N806",   # ML convention: local matrices like X_train are uppercase
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"src/churn/cli/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
pythonpath = ["src"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/churn"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
